--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-  --ganesha-purple-start: rgb(35,14,95);
-  --ganesha-purple-end: rgb(85,18,95);
+  --ganesha-purple: rgb(35,14,95);
   --ganesha-gold: rgb(240,225,130);
 }
 
@@ -15,17 +14,9 @@ button:hover {
 }
 
 .bg-ganesha {
-  background-color: var(--ganesha-purple-start);
+  background-color: var(--ganesha-purple);
 }
 
 .text-gold {
   color: var(--ganesha-gold);
-}
-
-.navbar-gradient {
-  background-image: linear-gradient(to right, 
-    var(--ganesha-purple-start), 
-    var(--ganesha-purple-end), 
-    var(--ganesha-purple-start)
-  );
 }
