--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 
 @theme {
   --ganesha-purple: rgb(35,14,95);
+  --ganesha-bordeaux: rgb(149, 54, 51);
   --ganesha-gold: rgb(240,225,130);
+  --ganesha-bg: rgb(207, 107, 89);
 }
 
 button {
@@ -14,7 +16,12 @@ button:hover {
 }
 
 .bg-ganesha {
-  background-color: var(--ganesha-purple);
+  background-color: var(--ganesha-bg)
+}
+
+.bg-ganesha-overlay {
+  background-color: var(--ganesha-bordeaux);
+  opacity: 0.7;
 }
 
 .text-gold {
