--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   --ganesha-bg: rgb(207, 107, 89);
 }
 
+.hero-overlay {
+  clip-path: polygon(100% 100%, 70% 100%, 50% 0%, 100% 0%);
+  background-color: #953733cc;
+}
+
 button {
   background-color: #953733;
   color: white;
