--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,10 @@ input:focus {
 .ProseMirror:focus {
 	outline: none;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important; /* háttér fehér */
+  box-shadow: 0 0 0px 1000px white inset !important;
+  -webkit-text-fill-color: black !important; /* szöveg színe */
+}
